[package]
name = "tinted-scheme-extractor"
version = "0.6.0"
edition = "2021"
description = "A tool to create a Tinted Theming scheme based on a provided image"
license = "MPL-2.0"
readme = "README.md"
authors = ["Jamy Golden <code@jamygolden.com>", "Tinted Theming <tintedtheming@proton.me>"]
homepage = "https://github.com/tinted-theming/tinted-scheme-extractor-rs"
repository = "https://github.com/tinted-theming/tinted-scheme-extractor-rs"
keywords = ["base16", "base24", "tinted-theming", "theme"]

[dependencies]
color-thief = "0.2.2"
image = "0.25.2"
palette = "0.7.6"
thiserror = "1.0.61"
tinted-builder = "0.8.0"
